--- a/VentilatorTesting/App.xaml
+++ b/VentilatorTesting/App.xaml
@@ -2,6 +2,7 @@
     x:Class="VentilatorTesting.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VentilatorTesting">
+    xmlns:local="using:VentilatorTesting"
+    RequestedTheme="Dark">
 
 </Application>
