--- a/VentilatorTesting/MainPage.xaml
+++ b/VentilatorTesting/MainPage.xaml
@@ -9,6 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <TextBlock Text="Hi, Ben!" Style="{ThemeResource HeaderTextBlockStyle}"
+                   VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </Page>
