First implementation of patient status view

--- a/VentilatorTestConsole/VentilatorTestConsole/StatusPage.xaml
+++ b/VentilatorTestConsole/VentilatorTestConsole/StatusPage.xaml
@@ -1,14 +1,7 @@
-﻿<Page
-    x:Class="VentilatorTestConsole.StatusPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VentilatorTestConsole"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+            xmlns:local="clr-namespace:VentilatorTestConsole"
+             x:Class="VentilatorTestConsole.StatusPage">
 
-    <Grid>
-
-    </Grid>
-</Page>
+</TabbedPage>
